--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "author": "Edgar Zavala",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ezavile/react-weather.git"
+  },
   "dependencies": {
     "axios": "^0.15.2",
     "express": "^4.13.4",
@@ -25,6 +29,8 @@
     "css-loader": "^0.23.1",
     "foundation-sites": "^6.2.0",
     "jquery": "^2.2.1",
+    "node-sass": "^3.4.2",
+    "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
